--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
     
+    <h3>new line</h3>
+
     <!-- header section starts -->
     <header>
         <a href="#" class="logo"><span>Best</span>App</a>
