--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     
-    <h3>new line</h3>
+    <h3>new line. Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, esse? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat eveniet ipsum veniam enim voluptatibus ducimus!
+    </h3>
 
     <!-- header section starts -->
     <header>
