till home responsive complete

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <a href="#" class="btn">download now</a>
     </div>
 
-    <div>
+    <div class="image">
          <img src="image/home-img.png" alt="phone">
     </div>
 
